# cpp_starter

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt
cmake/: StandardProjectSettings.cmake
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  tests.cc
